# vibe-python

./: pyproject.toml  this.diff
architecture/app/: ARCH-cli-orchestrator-v1.md  ARCH-config-manager-v1.md  ARCH-data-models-v1.md  ARCH-execution-guide-v1.md  ARCH-executor-v1.md  ARCH-scheduler-v1.md
architecture/infrastructure/: ARCH-dal-v1.md  ARCH-notifier-v1.md
bugs/: 001.md
designe/: 202506080943_initial_application_description.md  202506081000_design_plan.md
scripts/: restart.bat
src/vibe_python/: config.py  database.py  executor.py  main.py  models.py  notifier.py  scheduler.py
tasks/2025-Q2/: TASK-2025-001-phase1-core-engine.md  TASK-2025-002-scaffolding.md  TASK-2025-003-core-models.md  TASK-2025-004-core-executor.md  TASK-2025-005-session-keep-alive.md  TASK-2025-006-basic-cli.md  TASK-2025-007-phase2-database-and-resilience.md  TASK-2025-008-db-schema.md  TASK-2025-009-implement-dal.md  TASK-2025-010-implement-notifier.md  TASK-2025-011-executor-retry-logic.md  TASK-2025-012-integrate-dal-notifier-executor.md  TASK-2025-013-cli-status-commands.md  TASK-2025-014-phase3-scheduling.md  TASK-2025-015-apscheduler-integration.md  TASK-2025-016-service-orchestration.md  TASK-2025-017-restart-mechanism.md  TASK-2025-018-phase4-config-scalability.md  TASK-2025-019-directory-based-config.md  TASK-2025-020-execution-documentation.md
